main/default/objects/Location__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Building this location belongs to.</description>
    <inlineHelpText>Building this location belongs to.</inlineHelpText>
    <label>Building</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>