main/default/objects/Location__c/fields/Collocation_Provider__c.field-meta.xml
<CustomField>
    <fullName>Collocation_Provider__c</fullName>
    <label>Collocation Provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>274 Brannan JV, LLC</fullName>
            </value>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>Bay Area Internet Solutions (BAIS, Inc)</fullName>
            </value>
            <value>
                <fullName>BendBroadband Valt, LLC</fullName>
            </value>
            <value>
                <fullName>CoreSite</fullName>
            </value>
            <value>
                <fullName>DataPipe</fullName>
            </value>
            <value>
                <fullName>Digital 365 Main, LLC</fullName>
            </value>
            <value>
                <fullName>Equinix</fullName>
            </value>
            <value>
                <fullName>Integra</fullName>
            </value>
            <value>
                <fullName>Level 3 Commumications</fullName>
            </value>
            <value>
                <fullName>Quality Technology Services (QTS)</fullName>
            </value>
            <value>
                <fullName>Sungard</fullName>
            </value>
            <value>
                <fullName>TATA</fullName>
            </value>
            <value>
                <fullName>Telx</fullName>
            </value>
            <value>
                <fullName>Terremark North America, LLC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>