main/default/objects/Location__c/fields/Prospect_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Disposition__c</fullName>
    <label>Prospect Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NOT YET CONTACTED</fullName>
            </value>
            <value>
                <fullName>CALLED, NO MEANINGFUL CONTACT MADE</fullName>
            </value>
            <value>
                <fullName>FORMER CUSTOMER, NO INTEREST</fullName>
            </value>
            <value>
                <fullName>RELOCATING, NO INTEREST</fullName>
            </value>
            <value>
                <fullName>IN CONTRACT, NO FUTURE INTEREST</fullName>
            </value>
            <value>
                <fullName>IN CONTRACT, PROSPECT IN FUTURE</fullName>
            </value>
            <value>
                <fullName>VACANT</fullName>
            </value>
            <value>
                <fullName>APPOINTMENT SET</fullName>
            </value>
            <value>
                <fullName>QUALIFIED</fullName>
            </value>
            <value>
                <fullName>PROPOSED</fullName>
            </value>
            <value>
                <fullName>VERBAL COMMITMENT</fullName>
            </value>
            <value>
                <fullName>CLOSED WON</fullName>
            </value>
            <value>
                <fullName>CLOSED LOST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>