main/default/objects/Location__c/fields/Room_Suite__c.field-meta.xml
<CustomField>
    <fullName>Room_Suite__c</fullName>
    <label>Room/Suite</label>
    <length>20</length>
    <type>Text</type>
</CustomField>